# xfuzz

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  xfuzz
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-q-a.md
.github/workflows/: release.yml
instrumentation/: README.md
instrumentation/src/difuzz/: ControlRegisterCoverage.scala  GraphLedger.scala  InstrAssert.scala  InstrCov.scala  InstrReset.scala  README.md
instrumentation/src/rfuzz/: MetaReset.scala  NoDedup.scala  ProfilingTransform.scala  README.md  ReplaceMems.scala  SparseMem.scala  SplitMuxConditions.scala
instrumentation/src/sic/: Builder.scala  Coverage.scala  CoverageInfoEmitter.scala  CoverageShellOptions.scala  CoverageStatisticsPass.scala  FsmCoverage.scala  FsmCoveragePass.scala  FsmInfoPass.scala  LineCoverage.scala  LineCoveragePass.scala  README.md  ReadyValidCoverage.scala  ReadyValidCoveragePass.scala  RemoveCoverPointsPass.scala  ToggleCoverage.scala  ToggleCoveragePass.scala
instrumentation/src/sic/passes/: AddResetAssumptionPass.scala  AliasAnalysis.scala  ChangeMainPass.scala  KeepClockAndResetPass.scala  RandomStateInit.scala  RegisterResetAnnotationPass.scala
instrumentation/src/xfuzz/: ControlRegisterCoverTransform.scala  CoverPointTransform.scala  DontTouchClockAndResetTransform.scala  MuxCoverTransform.scala
scripts/: mem_stats.py  separator  visualizer
src/: coverage.rs  fuzzer.rs  harness.rs  lib.rs  monitor.rs
