[package]
name = "xfuzz"
version = "0.1.0"
edition = "2021"
description = "Fuzzing General-Purpose Hardware Designs with Software Fuzzers"

[features]
default = ["std"]
std = []

[dependencies]
libafl = { path = "./LibAFL/libafl/" }
libafl_bolts = { path = "./LibAFL/libafl_bolts/" }
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
rand = "0.8.5"

[lib]
name = "fuzzer"
crate-type = ["staticlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
